cli/tests/testdata/run/check_js_points_to_ts/test.js.out
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
  return 42;
  ~~~~~~~~~~
    at [WILDCARD]
